<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/firstValue"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:inputType="number"
        android:hint="@string/index_hint"/>

    <EditText
        android:id="@+id/secondValue"
        android:layout_toRightOf="@id/firstValue"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:inputType="number"
        android:hint="@string/carbs_hint"/>

    <Button
        android:id="@+id/calculateButton"
        android:layout_toRightOf="@+id/secondValue"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:text="@string/calculate_button"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/result_value"
            android:layout_below="@id/firstValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/result_hint"
            android:text="" />

        <TextView
            android:id="@+id/value_list"
            android:layout_below="@id/result_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/list"
            android:text="" />

        <TextView
            android:id="@+id/total_value_label"
            android:layout_below="@id/result_value"
            android:layout_toRightOf="@id/value_list"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:hint="@string/total_label"
            android:text=""/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/total_value"
            android:layout_below="@id/result_value"
            android:layout_toRightOf="@id/total_value_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/total"
            android:text=""/>
    </LinearLayout>
</LinearLayout>
